# PlainNN.cpp

./: .gitignore  CMakeLists.txt  README.md
data/model_save/: mnist_untrained_model.weights
data/utils/: extract_mnist_pt_weights.py  mnist_fc128_relu_fc10_sigmoid.weights
examples/: CMakeLists.txt  create_dataset.py  create_dataset_from_csv.py  create_model.cpp  extract_pt_weights.py  load_save_model.cpp  mnist_fc128_relu_fc10_sigmoid_double.weights  mnist_fc128_relu_fc10_sigmoid_float32.weights  train_model.cpp
examples/train/: train.txt
include/: activation.h  activation_fncs.h  data_loader.h  data_loaders.h  image_utils.h  initialization.h  layers.h  model.h  tensor.h
include/model/: data_loader.h  data_loaders.h  lr_scheduler.h  model.h  model_loader.h  model_storage.h  tensor.h  utils.h
include/model/data_loaders/: data_loader.h  mnist_dataloader.h
include/model/layers/: activation_fncs.h  dense.h  initialization.h  input.h  layer.h  layers.h
include/model/layers/activation_fncs/: activation_fnc.h  relu.h  sigmoid.h  softmax.h
include/model/schedulers/: lr_scheduler.h
include/plain_nn/: data_loaders.h  plain_nn.h  tensor.h
include/plain_nn/layers/: layers.h
include/stb_image/: stb_image_write.h
live_demo/: CMakeLists.txt  PlainNN_live_demo_colab.ipynb  live_demo.cpp  live_demo_web_ui.py  mnist_fc128_relu_fc10_sigmoid.json  mnist_fc128_relu_fc10_sigmoid.weights
plain_nn/include/plain_nn/: data_loaders.hpp  lr_scheduler.h  model_storage.h  model_storage.hpp  plain_nn.hpp  tensor.hpp  utils.h  utils.hpp
plain_nn/include/plain_nn/layers/: activation_fncs.hpp  initialization.hpp  layers.hpp
plain_nn/src/: image_utils.cpp  lr_scheduler.cpp  model_storage.cpp  plain_nn.cpp  tensor.cpp  utils.cpp
plain_nn/src/data_loaders/: mnist_dataloader.cpp
plain_nn/src/layers/: dense.cpp  initialization.cpp  input.cpp  layers.cpp
plain_nn/src/layers/activation_fncs/: activation_fncs.cpp  none.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/: MNISTDataLoader.cpp  activation.cpp  dense.cpp  image_utils.cpp  initialization.cpp  input.cpp  main.cpp  mnist_dataloader.cpp  model.cpp  model_loader.cpp  none.cpp  tensor.cpp
src/layers/: dense.cpp
src/model/: initialization.cpp  lr_scheduler.cpp  model.cpp  model_loader.cpp  model_storage.cpp  tensor.cpp  utils.cpp
src/model/data_loaders/: mnist_dataloader.cpp
src/model/layers/: dense.cpp  initialization.cpp  input.cpp  layers.cpp
src/model/layers/activation_fncs/: activation_fncs.cpp  none.cpp  relu.cpp  sigmoid.cpp
src/plain_nn/layers/: layers.cpp
src/plain_nn/layers/activation_fncs/: activation_fncs.cpp
test/: CMakeLists.txt
test/image_utils/: test_read_grayscale.cpp  test_read_rgb.cpp  test_write_grayscale.cpp  test_write_rgb.cpp
